[package]
name = "azcvm"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Takuma Imamura"]
license = "Apache-2.0"
repository = "https://github.com/hyperfinitism/azcvm-rs"
description = "A Rust library for guest attestation on Azure Confidential VMs"
readme = "README.md"
exclude = [".gitignore", ".github/*"]

[features]
default = []

cvm = []
snp = ["cvm"]
tdx = ["cvm"]

[dependencies]
base64 = "^0.22.1"
once_cell = "^1.21.3"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.145"
thiserror = "^2.0.17"
reqwest = { version = "^0.12", features = ["blocking", "json"] }
url = "^2.5.7"
x509-parser = "^0.18.0"

